--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230215200953" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20230216160616" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -25,8 +25,10 @@
 							<li class="menu__item">
 								<a href="#" class="menu__link">Midas Coin</a>
 							</li>
-							<li class="menu__item"><a href="#" class="menu__link">YAPs</a></li>
 							<li class="menu__item">
+								<a href="#" class="menu__link">YAPs</a>
+							</li>
+							<li class="menu__item _with-sub-menu">
 								<a href="#" class="menu__link _icon-spoller-arrow">Resources</a>
 								<ul class="menu__sub-list">
 									<li>
@@ -706,7 +708,7 @@
       src="https://kit.fontawesome.com/9ca418d431.js"
       crossorigin="anonymous"
     ></script> -->
-	<script src="js/app.min.js?_v=20230215200953"></script>
+	<script src="js/app.min.js?_v=20230216160616"></script>
 </body>
 
 </html>
