--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -10,8 +10,10 @@
           <li class="menu__item">
             <a href="#" class="menu__link">Midas Coin</a>
           </li>
-          <li class="menu__item"><a href="#" class="menu__link">YAPs</a></li>
           <li class="menu__item">
+            <a href="#" class="menu__link">YAPs</a>
+          </li>
+          <li class="menu__item _with-sub-menu">
             <a href="#" class="menu__link _icon-spoller-arrow">Resources</a>
             <ul class="menu__sub-list">
               <li>
