исправлены ошибки валидации

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
                 >
                   <div class="item__vector">
                     <img
-                      src="@img/icons/Vector 5.svg"
+                      src="@img/icons/Vector-image.svg"
                       alt="vector"
                       class="item__vector-image"
                     />
@@ -129,7 +129,7 @@
                 </a>
               </div>
               <div class="metrics__round">
-                <img src="@img/icons/Mask group.svg" alt="halfround" />
+                <img src="@img/icons/Mask-group.svg" alt="halfround" />
               </div>
             </div>
           </div>
