--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230216160616" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20230216161357" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -97,7 +97,7 @@
 						<div class="potential__item item">
 							<div data-watch data-watch-threshold="0.9" class="item__animated-fig-2">
 								<div class="item__vector">
-									<img src="img/icons/Vector 5.svg" alt="vector" class="item__vector-image" />
+									<img src="img/icons/Vector-image.svg" alt="vector" class="item__vector-image" />
 									<div class="item__vector-logo-box">
 										<a href="#" class="item__vector-logo _icon-logo"></a>
 									</div>
@@ -158,7 +158,7 @@
 							</a>
 						</div>
 						<div class="metrics__round">
-							<img src="img/icons/Mask group.svg" alt="halfround" />
+							<img src="img/icons/Mask-group.svg" alt="halfround" />
 						</div>
 					</div>
 				</div>
@@ -708,7 +708,7 @@
       src="https://kit.fontawesome.com/9ca418d431.js"
       crossorigin="anonymous"
     ></script> -->
-	<script src="js/app.min.js?_v=20230216160616"></script>
+	<script src="js/app.min.js?_v=20230216161357"></script>
 </body>
 
 </html>
