--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<meta name="format-detection" content="telephone=no" />
 	<!-- <style>body{opacity: 0;}</style> -->
-	<link rel="stylesheet" href="css/style.min.css?_v=20230216161357" />
+	<link rel="stylesheet" href="css/style.min.css?_v=20230302195725" />
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -161,6 +161,7 @@
 							<img src="img/icons/Mask-group.svg" alt="halfround" />
 						</div>
 					</div>
+					<div class="metrics__blur-bg"></div>
 				</div>
 			</section>
 			<section class="page__stake stake _big-block">
@@ -708,7 +709,7 @@
       src="https://kit.fontawesome.com/9ca418d431.js"
       crossorigin="anonymous"
     ></script> -->
-	<script src="js/app.min.js?_v=20230216161357"></script>
+	<script src="js/app.min.js?_v=20230302195725"></script>
 </body>
 
 </html>
